complete api for user
